# bicycle-led-software

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  build  clean.sh  config.cmake  convert-icons.sh  fix_submodule_path.sh  format.sh  index.html  mkdocs.yml  partitions_16M.csv  partitions_4M.csv  partitions_8M.csv  sdkconfig  update_all_sdkconfigs.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: 000-internal.md  001-bug_report.yml  002-feature_request.yml  config.yml
.github/workflows/: ci.yml  mkdocs.yml  pr.yml
assets/: display.xcf
configs/: config_4M.cmake  config_comred.cmake  config_gnufox.cmake  sdkconfig_4M  sdkconfig_8M  sdkconfig_comred  sdkconfig_gnufox
docs/: index.md
docs/getting-started/: hardware.md  software.md
getting-started/hardware/: index.html
getting-started/software/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  clock.cpp  clock.h  configs.cpp  configs.h  configs_helper.h  configutils_bicycle.h  configwrapper_bicycle.cpp  defines.h  enums.h  global_lock.cpp  global_lock.h  helpers.h  iter.h  main.cpp  screen.cpp  screen.h  serialdebug.cpp  serialdebug.h  statemachine.cpp  statemachine.h  taskmanager.cpp  taskmanager.h  wifi.cpp  wifi.h
main/guihelpers/: bicyclechangevaluedisplay.h  changevaluedisplay.h  changevaluedisplay_enums.cpp  changevaluedisplay_enums.h  changevaluedisplayradioicon.h  display.cpp  display.h  displaywithtitle.cpp  displaywithtitle.h  errorhandler.cpp  errorhandler.h  menudisplay.cpp  menudisplay.h  popupscreen.cpp  popupscreen.h  runtimeicon.cpp  runtimeicon.h
main/guihelpers/widgets/: statusicons.cpp  statusicons.h
main/hardware/: adc.cpp  adc.h  i2c.cpp  i2c.h  portexpander.cpp  portexpander.h
main/icons/: arrow.cpp  arrow.h  arrow_grey.cpp  arrow_grey.h  bootlogo.cpp  bootlogo.h  bootlogo_grey.cpp  bootlogo_grey.h  buttons.cpp  buttons.h  buttons_grey.cpp  buttons_grey.h  settings.cpp  settings.h  settings_grey.cpp  settings_grey.h  smol.cpp  smol.h  testimage.cpp  testimage.h  testimage_grey.cpp  testimage_grey.h
main/input/: buttons.cpp  buttons.h  dpad.cpp  dpad.h  dpadimpl.h
main/runtimeicons/: batteryproblemicon.cpp  batteryproblemicon.h  brakelighticon.cpp  brakelighticon.h  highbeamlighticon.cpp  highbeamlighticon.h  leftarrowicon.cpp  leftarrowicon.h  lowbeamlighticon.cpp  lowbeamlighticon.h  rearfoglighticon.cpp  rearfoglighticon.h  rightarrowicon.cpp  rightarrowicon.h
main/screens/: configurebasicbuttondisplay.cpp  configurebasicbuttondisplay.h  startdisplay.cpp  startdisplay.h
main/screens/menus/: buttonsettingsmenu.cpp  buttonsettingsmenu.h  configurecustombutton.cpp  configurecustombutton.h  debugmenu.cpp  debugmenu.h  mainmenu.cpp  mainmenu.h  settingsmenu.cpp  settingsmenu.h
search/: search_index.json
